[gd_scene load_steps=10 format=3 uid="uid://cbaabmsqd66rd"]

[ext_resource type="Script" path="res://spellManager/spell_manager.gd" id="1_mdmv7"]
[ext_resource type="Texture2D" uid="uid://dh3key88dgijt" path="res://icon.svg" id="2_s1noq"]
[ext_resource type="Script" path="res://spellManager/Spellbook/spellbook.gd" id="2_snhcv"]
[ext_resource type="Script" path="res://spellManager/actionBar/action_bar.gd" id="3_8r1a2"]
[ext_resource type="Script" path="res://spellManager/Spellbook/spell_grid_container.gd" id="3_lo8px"]
[ext_resource type="Script" path="res://spellManager/actionBar/spell.gd" id="3_txu1t"]
[ext_resource type="Resource" uid="uid://om6g0kawh4l0" path="res://spellManager/spells/Projectile/fireball_projectile_resource.tres" id="4_aevgh"]
[ext_resource type="PackedScene" uid="uid://jgqm1l0hvxut" path="res://spellManager/actionBar/spell_button.tscn" id="4_ny401"]
[ext_resource type="Resource" uid="uid://dpk57uqwfjqyg" path="res://spellManager/spells/Projectile/frostbolt_projectile_resource.tres" id="5_s78px"]

[node name="SpellManager" type="Node3D"]
script = ExtResource("1_mdmv7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Spellbook" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.5
offset_top = -128.5
offset_right = 364.5
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_snhcv")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Spellbook"]
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Spellbook/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Spellbook/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="SpellGridContainer" type="GridContainer" parent="UI/Spellbook/HBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 4)
layout_mode = 2
columns = 3
script = ExtResource("3_lo8px")

[node name="SpellInformation" type="PanelContainer" parent="UI/Spellbook/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/Spellbook/HBoxContainer/SpellInformation"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Spellbook/HBoxContainer/SpellInformation/MarginContainer"]
layout_mode = 2

[node name="SpellIcon" type="TextureRect" parent="UI/Spellbook/HBoxContainer/SpellInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("2_s1noq")
expand_mode = 2
stretch_mode = 3

[node name="SpellName" type="Label" parent="UI/Spellbook/HBoxContainer/SpellInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Example Spell"

[node name="SpellCooldown" type="Label" parent="UI/Spellbook/HBoxContainer/SpellInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cooldown: 20s
"

[node name="SpellDescription" type="RichTextLabel" parent="UI/Spellbook/HBoxContainer/SpellInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Example description of very dangerous spell you can write many texts wow. Do 1337 damages in your face yo.
This is a very long description of a spell."
fit_content = true

[node name="ActionBar" type="HBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -112.0
offset_right = 208.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_8r1a2")
default_spells = Array[ExtResource("3_txu1t")]([ExtResource("4_aevgh"), ExtResource("5_s78px")])

[node name="SpellButton" parent="UI/ActionBar" instance=ExtResource("4_ny401")]
layout_mode = 2

[node name="SpellButton2" parent="UI/ActionBar" instance=ExtResource("4_ny401")]
layout_mode = 2

[node name="SpellButton3" parent="UI/ActionBar" instance=ExtResource("4_ny401")]
layout_mode = 2

[node name="SpellButton4" parent="UI/ActionBar" instance=ExtResource("4_ny401")]
layout_mode = 2

[node name="SpellButton5" parent="UI/ActionBar" instance=ExtResource("4_ny401")]
layout_mode = 2
